--- a/src/app/views/carrito-compras/carrito-compras.component.html
+++ b/src/app/views/carrito-compras/carrito-compras.component.html
@@ -72,55 +72,47 @@
 
 
 <ion-footer>
-  <ion-toolbar class="scrollable-toolbar">
-    <!-- Indicador de deslizamiento -->
-    <!-- <div class="scroll-hint">
-      <ion-icon name="arrow-forward-outline"></ion-icon>
-      <span>Desliza para más opciones</span>
-    </div> -->
-
+  <ion-toolbar class="fixed-toolbar">
     <!-- Tabs -->
-    <div class="scrollable-tabs">
+    <div class="fixed-tabs">
       <!-- Tab: Inicio -->
-      <div class="tab-item">
-        <ion-icon name="home-outline" (click)="navigateTo('home')"></ion-icon>
+      <div
+        class="tab-item"
+        [class.active]="currentRoute === 'home'"
+        (click)="navigateTo('home')"
+      >
+        <ion-icon name="home-outline"></ion-icon>
         <ion-label>Inicio</ion-label>
       </div>
 
       <!-- Tab: Tienda -->
-      <div class="tab-item">
-        <ion-icon name="storefront-outline" (click)="navigateTo('tienda')"></ion-icon>
+      <div
+        class="tab-item"
+        [class.active]="currentRoute === 'tienda'"
+        (click)="navigateTo('tienda')"
+      >
+        <ion-icon name="storefront-outline"></ion-icon>
         <ion-label>Tienda</ion-label>
       </div>
 
       <!-- Tab: Notificaciones -->
-      <div class="tab-item">
-        <ion-icon name="notifications-outline" (click)="navigateTo('notificaciones')"></ion-icon>
+      <div
+        class="tab-item"
+        [class.active]="currentRoute === 'notificaciones'"
+        (click)="navigateTo('notificaciones')"
+      >
+        <ion-icon name="notifications-outline"></ion-icon>
         <ion-label>Notificaciones</ion-label>
       </div>
 
-      <!-- Nueva Tab: Perfil -->
-      <div class="tab-item">
-        <ion-icon name="person-outline" (click)="navigateTo('mi-perfil')"></ion-icon>
-        <ion-label>Perfil</ion-label>
-      </div>
-
-      <!-- Nueva Tab: Favoritos -->
-      <div class="tab-item">
-        <ion-icon name="heart-outline" (click)="navigateTo('favoritos')"></ion-icon>
-        <ion-label>Favoritos</ion-label>
-      </div>
-
-      <!-- Nueva Tab: Configuración -->
-      <div class="tab-item">
-        <ion-icon name="settings-outline" (click)="navigateTo('mi-cuenta')"></ion-icon>
+      <!-- Tab: Configuración -->
+      <div
+        class="tab-item"
+        [class.active]="currentRoute === 'mi-cuenta'"
+        (click)="navigateTo('mi-cuenta')"
+      >
+        <ion-icon name="settings-outline"></ion-icon>
         <ion-label>Más</ion-label>
-      </div>
-
-      <!-- Nueva Tab: Ayuda -->
-      <div class="tab-item">
-        <ion-icon name="help-circle-outline" (click)="navigateTo('ayuda')"></ion-icon>
-        <ion-label>Ayuda</ion-label>
       </div>
     </div>
   </ion-toolbar>
