--- a/src/app/views/tienda/tienda.component.html
+++ b/src/app/views/tienda/tienda.component.html
@@ -17,41 +17,44 @@
 </ion-header>
 
 <ion-content>
+
   <ion-toolbar style="border-bottom: 1px solid #ccc;">
-    <ion-grid>
-      <ion-row class="filters-row">
-        <ion-col size="auto">
-          <ion-button fill="clear" class="filter-button">
-            Categorías
-            <ion-icon slot="end" name="chevron-down-outline"></ion-icon>
-          </ion-button>
-        </ion-col>
-        <ion-col size="auto">
-          <ion-button fill="clear" class="filter-button">
-            Marca
-            <ion-icon slot="end" name="chevron-down-outline"></ion-icon>
-          </ion-button>
-        </ion-col>
-        <ion-col size="auto">
-          <ion-button fill="clear" class="filter-button">
-            Ordenar por
-            <ion-icon slot="end" name="chevron-down-outline"></ion-icon>
-          </ion-button>
-        </ion-col>
-        <ion-col size="auto">
-          <ion-button fill="clear" class="filter-button">
-            Precio
-            <ion-icon slot="end" name="chevron-down-outline"></ion-icon>
-          </ion-button>
-        </ion-col>
-        <ion-col size="auto">
-          <ion-button fill="clear" class="filter-button">
-            <ion-icon name="funnel-outline"></ion-icon> Filtros
-          </ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-toolbar>
+  <ion-grid>
+    <ion-row class="filters-row">
+      <!-- Categorías -->
+      <ion-col size="auto">
+        <ion-button fill="clear" class="filter-button" (click)="toggleFilter('category')">
+          Categorías
+          <ion-icon slot="end" name="chevron-down-outline"></ion-icon>
+        </ion-button>
+      </ion-col>
+    
+      <ion-col size="auto">
+        <ion-button fill="clear" class="filter-button" (click)="toggleFilter('price')">
+          Precio
+          <ion-icon slot="end" name="chevron-down-outline"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <!-- Dropdown de Filtros -->
+  <div *ngIf="activeFilter === 'category'" class="dropdown">
+    <ion-item *ngFor="let cat of categories" (click)="applyFilter('category', cat)">
+      {{ cat }}
+    </ion-item>
+  </div>
+  <div *ngIf="activeFilter === 'brand'" class="dropdown">
+    <ion-item *ngFor="let brand of brands" (click)="applyFilter('brand', brand)">
+      {{ brand }}
+    </ion-item>
+  </div>
+  <div *ngIf="activeFilter === 'price'" class="dropdown">
+    <ion-item (click)="applyFilter('price', 'low-to-high')">Menor a mayor</ion-item>
+    <ion-item (click)="applyFilter('price', 'high-to-low')">Mayor a menor</ion-item>
+  </div>
+</ion-toolbar>
+
 
   <div class="product-grid">
     <ng-container *ngIf="!isLoading; else loading">
