--- a/src/app/views/mi-cuenta/mi-cuenta.component.html
+++ b/src/app/views/mi-cuenta/mi-cuenta.component.html
@@ -37,9 +37,9 @@
       <ion-icon name="bar-chart-outline" slot="start"></ion-icon>
       <ion-label>Resumen</ion-label>
     </ion-item>
-    <ion-item button>
+    <ion-item button (click)="navigateTo('mis-productos')">
       <ion-icon name="pricetags-outline" slot="start"></ion-icon>
-      <ion-label>Publicaciones</ion-label>
+      <ion-label>Mis Productos</ion-label>
     </ion-item>
     <ion-item button>
       <ion-icon name="chatbubbles-outline" slot="start"></ion-icon>
