--- a/src/app/views/opinion-producto/opinion-producto.component.scss
+++ b/src/app/views/opinion-producto/opinion-producto.component.scss
@@ -83,7 +83,7 @@ ion-toolbar {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
