--- a/src/app/views/carrito/carrito.component.scss
+++ b/src/app/views/carrito/carrito.component.scss
@@ -90,7 +90,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
