--- a/src/app/views/mi-perfil/mi-perfil.component.scss
+++ b/src/app/views/mi-perfil/mi-perfil.component.scss
@@ -110,7 +110,7 @@ ion-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
