--- a/src/app/views/tienda/tienda.component.scss
+++ b/src/app/views/tienda/tienda.component.scss
@@ -601,7 +601,7 @@ font-size: 12px;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
