--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -151,9 +151,10 @@ text-align: center;
 .circle-button img {
   width: 50px;
   height: 50px;
-  border-radius: 50%; /* Botón circular */
+  border-radius: 50%; 
   background: white;
-  padding: 10px;
+  // padding: 10px;
+  object-fit: cover;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
