--- a/src/app/views/tienda/tienda.component.html
+++ b/src/app/views/tienda/tienda.component.html
@@ -17,7 +17,6 @@
 </ion-header>
 
 <ion-content>
-
 <ion-toolbar style="border-bottom: 1px solid #ccc;">
   <ion-grid>
     <ion-row class="filters-row">
@@ -25,14 +24,6 @@
       <ion-col size="auto">
         <ion-button fill="clear" class="filter-button" (click)="toggleFilter('category')">
           Categorías
-          <ion-icon slot="end" name="chevron-down-outline"></ion-icon>
-        </ion-button>
-      </ion-col>
-
-      <!-- Filtro por Marca -->
-      <ion-col size="auto">
-        <ion-button fill="clear" class="filter-button" (click)="toggleFilter('brand')">
-          Marcas
           <ion-icon slot="end" name="chevron-down-outline"></ion-icon>
         </ion-button>
       </ion-col>
@@ -45,16 +36,16 @@
         </ion-button>
       </ion-col>
 
-     <!-- Filtro por Búsqueda -->
-<ion-col size="auto">
-  <ion-input
-    [(ngModel)]="searchTerm"
-    (ionInput)="applyFilter('search', $event.target.value)"
-    placeholder="Buscar productos"
-  ></ion-input>
-</ion-col>
+      <!-- Filtro por Texto -->
+      <ion-col size="auto">
+        <ion-input
+          [(ngModel)]="searchTerm"
+          (ionInput)="setFilter('search', $event.target.value)"
+          placeholder="Buscar producto"
+        ></ion-input>
+      </ion-col>
 
-
+      <!-- Limpiar Filtros -->
       <ion-col size="auto">
         <ion-button fill="clear" class="filter-button" (click)="clearFilters()">Limpiar filtros</ion-button>
       </ion-col>
@@ -64,15 +55,16 @@
 
 <!-- Dropdown de Filtros -->
 <div *ngIf="activeFilter === 'category'" class="dropdown">
-  <ion-item *ngFor="let cat of categories" (click)="applyFilter('category', cat)">
+  <ion-item *ngFor="let cat of categories" (click)="setFilter('category', cat)">
     {{ cat }}
   </ion-item>
 </div>
 
 <div *ngIf="activeFilter === 'price'" class="dropdown">
-  <ion-item (click)="applyFilter('price', 'high-to-low')">Menor a mayor</ion-item>
-  <ion-item (click)="applyFilter('price', 'low-to-high')">Mayor a menor</ion-item>
+  <ion-item (click)="setFilter('priceRange', [0, 10000])">Menor a mayor</ion-item>
+  <ion-item (click)="setFilter('priceRange', [10000, 0])">Mayor a menor</ion-item>
 </div>
+
 
   <div class="product-grid">
     <ng-container *ngIf="!isLoading; else loading">
