--- a/src/app/views/detalle/detalle.component.html
+++ b/src/app/views/detalle/detalle.component.html
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-      <!-- Sección de precio, stock y acciones -->
+      <!-- Sección de precio, stock y acciones1 -->
       <div class="price-section">
         <div class="price-and-actions">
           <!-- Precio -->
