--- a/src/app/views/detalle/detalle.component.scss
+++ b/src/app/views/detalle/detalle.component.scss
@@ -754,3 +754,30 @@ ion-button:active {
     }
   }
 }
+
+
+.discount-line {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin-bottom: 8px;
+}
+
+.original-price {
+  text-decoration: line-through;
+  color: #b0b0b0;
+  font-size: 0.9rem;
+  margin-right: 8px;
+}
+
+.discount-price {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #4a008e;
+}
+
+.discount-percentage {
+  font-size: 0.9rem;
+  color: #ff5722;
+  margin-left: 4px;
+}
